add validation groups, fix mapper null handling, update tests
- Add validation groups to ReceitaRequestDTO and use @Validated per endpoint in ReceitaController (POST/PUT/PATCH).
- Ensure ReceitaMapper.toEntity sets receitaIngredientes to null when input is null; update tests accordingly